---------------------------------------------

- v1.0.1010                                 -
---------------------------------------------
- 2020-06-01                                -
---------------------------------------------
.: WSM: BugFix: QR code image slow render issue (WSM-79)
.: WSM: Task: Minimize data entry (WSM-86)
.: WSM: Task: A button to view your shop (WSM-88)

- v1.0.1000                                 -
---------------------------------------------
- 2020-05-31                                -
---------------------------------------------
.: WSM: Task: Update code from website (WSM-54)

---------------------------------------------
- 2020-05-30                                -
---------------------------------------------
.: WSM: Task: Update profile image and banner image design (WSM-54)
.：WSM: Task: Change currency service default code (WSM-54)

---------------------------------------------
- 2020-05-29                                -
---------------------------------------------
.: WSM: BugFix: Checking opening info (WSM-36)
.: WSM: BugFix: Loading spinner in pending button (WSM-36)
.: WSM: BugFix: Topic displayed incorrectly (WSM-71)
.: WSM: BugFix: Facebook and Google error message from server (WSM-1)
.: WSM: Task: Change qrcode url (WSM-20)

---------------------------------------------
- 2020-05-28                                -
---------------------------------------------
.: WSM: Task: Update managing items flow (WSM-54)
.: WSM: BugFix: Navigate to correct category when category name is edited (WSM-5)
.: WSM: BugFix: Fixed operation after adding new contributor without refresh (WSM-25)

---------------------------------------------
- 2020-05-27                                -
---------------------------------------------
.: WSM: Task: Update Shop Settings (WSM-23)
.: WSM: BugFix: Fix Profile Ordering Issue (WSM-29)

---------------------------------------------
- 2020-05-26                                -