@@ -42,11 +42,17 @@ export class AuthCategoryContributorService {
   removeCategory(category_id) {
     return this.http.delete(AuthCategoryContributorUrl.removeCategoryUrl + '/' + category_id, this.accessTokenService.getAccessToken());
   }
+  getNumberOfAllCategoriesItems() {
+    return this.http.get(AuthCategoryContributorUrl.getNumberOfAllCategoriesItemsUrl, this.accessTokenService.getAccessToken());
+  }
   getNumberOfAllItems() {
     return this.http.get<{ result: number }>(AuthCategoryContributorUrl.getNumberOfAllItemsUrl, this.accessTokenService.getAccessToken());
   }
   getNumberOfNewItems() {
     return this.http.get<{ result: number }>(AuthCategoryContributorUrl.getNumberOfNewItemsUrl, this.accessTokenService.getAccessToken());
+  }
+  getNumberOfTodaySpecialItems() {
+    return this.http.get<{ result: number }>(AuthCategoryContributorUrl.getNumberOfTodaySpecialItemsUrl, this.accessTokenService.getAccessToken());
   }
   getNumberOfDiscountItems() {
     return this.http.get<{ result: number }>(AuthCategoryContributorUrl.getNumberOfDiscountItemsUrl, this.accessTokenService.getAccessToken());
